
package com.minsait.onesait.platform.automl.vision.domain;


public interface GoogleAutoMLImageClassifier extends ImageClassifier, AutoMLModel {

}
